[tool.poetry]
name = "prisma-ml"
version = "0.1.0"
description = "This library automates data summarization, feature selection, and model evaluation, allowing you to focus on building and refining your models."
authors = ["Yousinator <ymusabeh.dev@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
numpy = "^1.26.3"
rich = "^13.7.0"
seaborn = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
